# s3-buddy

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: config.rs  lib.rs  main.rs  manager.rs  route53.rs  s3.rs  scheduler.rs  server.rs  tui.rs  types.rs
tests/: integration_test.rs
