[package]
name = "s3-buddy"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.52"
aws-sdk-route53 = "1.48"
tokio = { version = "1.40", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
url = "2.5"

[dev-dependencies]
mockall = "0.13"
