[package]
name = "s3-buddy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "s3-buddy-server"
path = "src/bin/server.rs"

[[bin]]
name = "s3-buddy-client"
path = "src/bin/client.rs"

# Legacy standalone binary removed - use s3-buddy-server instead
# [[bin]]
# name = "s3-buddy"
# path = "src/main.rs"

[dependencies]
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.52"
aws-sdk-route53 = "1.48"
tokio = { version = "1.40", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"

# Server dependencies
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# TUI dependencies
ratatui = "0.28"
crossterm = "0.28"
reqwest = { version = "0.12", features = ["json"] }

# Shared utilities
uuid = { version = "1.10", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
mockall = "0.13"
